--- a/favorite-things.html
+++ b/favorite-things.html
@@ -10,15 +10,30 @@
     <h3>People</h3>
     <p>Here are some of my favorite people!</p>
     <ul>
-      <li>My brother Christopher</li>
+      <li>
+        <a href="http://www.example.com/christopher.html">
+          My brother <strong>Christopher</strong><br>
+          <img src="img/chris.jpg" alt="A photo of Christopher."style="width:200px;height:200px;">
+        </a>
+      </li>
       <li>My mom and dad:
         <ul>
-          <li>Steve</li>
-          <li>Carol</li>
+          <li><em>Steve</em></li>
+          <li><em>Carol</em></li>
         </ul>
       </li>
-    <li>My friend Jessica</li>
-    <li>My friend Candy</li>
+      <li>
+        <a href="http://www.example.com/jessica.html">
+          My friend <strong>Jessica</strong><br>
+          <img src="img/jessica.jpg" alt="A photo of Jessica."style="width:200px;height:200px;">
+        </a>
+      </li>
+      <li>
+        <a href="http://www.example.com/Candy.html">
+          My friend <strong>Candy</strong><br>
+          <img src="img/candy.jpg" alt="A photo of Candy."style="width:200px;height:200px;">
+        </a>
+      </li>
   </ul>
 
   <h3>Flavors of ice cream</h3>
