--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Web page #1</title>
-  <body>
+  <body style="background-color:#F3E3D0">
     <h1>My first web page</h1>
     <h2>Written with guidance of <em>Epicodus</em></h2>
 
