--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
     <title>Web page #1</title>
+  </head>
   <body style="background-color:#F3E3D0">
     <h1>My first web page</h1>
     <h2>Written with guidance of <em>Epicodus</em></h2>
